# agent-skills

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  SKILL.md  aesthetic-guide.skill
.claude-plugin/: marketplace.json
.claude/docs/: skill-audit-2026-01-30.md
my-voice/references/: examples.md
scripts/: new-skill  newskill-gist.sh
skills/agentic-docs/: SKILL.md
skills/architecture-scaffold-workspace/test-project/: ASSESSMENT.md  ASSESSMENT_CIRCULAR.md  ASSESSMENT_VAGUE.md  Cargo.toml
skills/architecture-scaffold-workspace/test-project/src/: lib.rs  scaffold.rs
skills/architecture-scaffold-workspace/test-project/src/analytics/: mod.rs
skills/architecture-scaffold-workspace/test-project/src/auth/: mod.rs
skills/architecture-scaffold-workspace/test-project/src/notification/: mod.rs
skills/architecture-scaffold-workspace/test-project/src/project_service/: mod.rs
skills/architecture-scaffold-workspace/test-project/src/query/: mod.rs
skills/architecture-scaffold-workspace/test-project/src/storage/: mod.rs
skills/architecture-scaffold-workspace/test-project/src/task_query/: mod.rs
skills/architecture-scaffold-workspace/test-project/src/task_service/: mod.rs
skills/architecture-scaffold-workspace/test-project/src/user_service/: mod.rs
skills/autonomous-agent-readiness/: SKILL.md
skills/de-slop/: SKILL.md
skills/deep-work/: SKILL.md
skills/dev-server/: SKILL.md
skills/docs-changelog/: SKILL.md
skills/explainer/: SKILL.md
skills/explanatory-playground/: SKILL.md
skills/interaction-design/: SKILL.md
skills/manual-testing/: SKILL.md
(+190 files in other folders)
