[package]
name = "taskflow"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "scaffold-check"
path = "src/scaffold.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
